[package]
name = "u545-nucleo"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "stm32u545re",
    "time-driver-any",
    "exti",
    "memory-x",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git" }
embedded-io-async = "0.6.1"
panic-probe = "1.0.0"
