[package]
name = "u545-nucleo"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "stm32u545re",
    "time-driver-any",
    "exti",
    "memory-x",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git",features = ["defmt"] }
embedded-io-async = "0.6.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
lm75 = "1.0.0"
heapless = "0.9.1"
